MOSA, but 420% better! 😃 (#1018)
* Changes

* NuGet changes

* Fix Drawf typo (should be Dwarf)

* Update template

* Add all files for bootstrap tool in installer

* Fix some warnings

* Port Mosa.Tool.Bootstrap to Avalonia

* Fix bootstrap tool not exiting in a case

* Implement plugs in demos

* Make Debug use FailFast + other changes

* Add plugs for other demos

* Update template

* Fix Mosa.Tools.Package.nuspec

* Split up File plug into 2 classes

* Add default implementations for plugs

* Use Console in template

* Modify Console plug

* Add null checks in CompareTo()

* Add more null checks in CompareTo()

---------

Co-authored-by: AnErrupTion <anerruption@disroot.org>

--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -8,7 +8,7 @@
 		<owners>MOSA Project</owners>
 		<license type="expression">BSD-3-Clause-Clear</license>
 		<projectUrl>http://www.mosa-project.org</projectUrl>
-		<icon>images\Mosa Icon.png</icon>
+		<icon>images/Mosa Icon.png</icon>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>MOSA Tools Package</summary>
 		<description>MOSA Tools Package</description>
@@ -17,39 +17,43 @@
 		<tags>MOSA Compiler</tags>
 		<dependencies>
 		</dependencies>
+		<contentFiles>
+			<files include="**/*.*" buildAction="None" copyToOutput="true" />
+		</contentFiles>
 	</metadata>
 	<files>
-		<file src="..\Art\Mosa Icon.png" target="images\" />
-		<file src="..\..\bin\runtimes\**\*.*" target="tools/runtimes" />
-		<file src="..\..\bin\Avalonia*.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Compiler.Common.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Compiler.Framework.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.CLR.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Platform.ARMv8A32.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Platform.x86.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Platform.x64.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Explorer.*" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Debugger.*" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Launcher.*" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Compiler.*" target="tools" />
-		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Utility.Configuration.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Utility.DebugEngine.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Utility.FileSystem.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Utility.Launcher.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Utility.RSP.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Utility.Disassembler.dll" target="tools" />
-		<file src="..\..\bin\dnlib.dll" target="tools" />
-		<file src="..\..\bin\Reko.Arch.Arm.dll" target="tools" />
-		<file src="..\..\bin\Reko.Arch.X86.dll" target="tools" />
-		<file src="..\..\bin\Reko.Core.dll" target="tools" />
-		<file src="..\..\bin\Reko.dll" target="tools" />
-		<file src="..\..\bin\PriorityQueue.dll" target="tools" />
-		<file src="..\..\bin\WinFormsUI.dll" target="tools" />
-		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" target="tools" />
-		<file src="..\..\bin\System.Reactive.dll" target="tools" />
-		<file src="..\..\bin\SkiaSharp.dll" target="tools" />
-		<file src="..\..\bin\HarfBuzzSharp.dll" target="tools" />
+		<file src="..\Art\Mosa Icon.png" target="images" />
+		<file src="..\..\bin\runtimes\**\*.*" target="contentFiles/any/net7.0/Tools/runtimes" />
+		<file src="..\..\bin\Avalonia*.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.Common.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.Framework.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.CLR.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Platform.ARMv8A32.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Platform.x86.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Platform.x64.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Tool.Explorer.*" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Tool.Debugger.*" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Tool.Launcher.*" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Tool.Compiler.*" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.Configuration.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.DebugEngine.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.FileSystem.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.Launcher.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.RSP.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Mosa.Utility.Disassembler.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\dnlib.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Reko.Arch.Arm.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Reko.Arch.X86.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Reko.Core.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Reko.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\PriorityQueue.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\WinFormsUI.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\System.Reactive.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\SkiaSharp.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\HarfBuzzSharp.dll" target="contentFiles/any/net7.0/Tools" />
+		<file src="..\..\bin\Tmds.DBus.dll" target="contentFiles/any/net7.0/Tools" />
 	</files>
 </package>
