--- a/Source/Mosa.Compiler.Framework.CLR/Mosa.Compiler.Framework.CLR.csproj
+++ b/Source/Mosa.Compiler.Framework.CLR/Mosa.Compiler.Framework.CLR.csproj
@@ -7,6 +7,7 @@
 		<LangVersion>11.0</LangVersion>
 		<OutputPath>..\..\bin\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<!-- <WarningsAsErrors>Nullable</WarningsAsErrors> -->
     </PropertyGroup>
 
 	<ItemGroup>
