-New CIL Decoder (initial release)

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: windows-latest
     env:
       BUILD_VERSION: 2.3.0
+      NUGET_ENABLE_LEGACY_CSPROJ_PACK: true
     steps:
       - name: Set net7.0
         uses: actions/setup-dotnet@v1
