--- a/Source/Mosa.Packages/Mosa.Korlib.nuspec
+++ b/Source/Mosa.Packages/Mosa.Korlib.nuspec
@@ -13,7 +13,7 @@
 		<summary>MOSA Corlib</summary>
 		<description>MOSA implementation of corlib</description>
 		<releaseNotes></releaseNotes>
-		<copyright>Copyright © MOSA Project 2023</copyright>
+		<Copyright>Copyright © MOSA Project 2023</Copyright>
 		<tags>MOSA Compiler corlib</tags>
 	</metadata>
 	<files>
