--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -13,7 +13,7 @@
 		<summary>MOSA Tools Package</summary>
 		<description>MOSA Tools Package</description>
 		<releaseNotes></releaseNotes>
-		<copyright>Copyright © MOSA Project 2023</copyright>
+		<Copyright>Copyright © MOSA Project 2023</Copyright>
 		<tags>MOSA Compiler</tags>
 		<dependencies>
 		</dependencies>
