--- a/Source/Mosa.Tool.Launcher.Console/Mosa.Tool.Launcher.Console.csproj
+++ b/Source/Mosa.Tool.Launcher.Console/Mosa.Tool.Launcher.Console.csproj
@@ -4,7 +4,7 @@
 		<OutputType>Exe</OutputType>
 		<Title>Mosa.Tool.Launcher.Console</Title>
 		<Company>MOSA Project</Company>
-		<copyright>Copyright © MOSA Project 2023</copyright>
+		<Copyright>Copyright © MOSA Project 2023</Copyright>
 		<LangVersion>11.0</LangVersion>
 		<DebugType>full</DebugType>
 		<OutputPath>..\..\bin\</OutputPath>
