--- a/Source/Mosa.Utility.SourceCodeGenerator/Mosa.Utility.SourceCodeGenerator.csproj
+++ b/Source/Mosa.Utility.SourceCodeGenerator/Mosa.Utility.SourceCodeGenerator.csproj
@@ -5,7 +5,7 @@
 		<AssemblyTitle>Mosa.Utility.SourceCodeGenerator</AssemblyTitle>
 		<Company>MOSA Project</Company>
 		<Product>Mosa.Utility.SourceCodeGenerator</Product>
-		<copyright>Copyright © MOSA Project 2023</copyright>
+		<Copyright>Copyright © MOSA Project 2023</Copyright>
 		<DebugType>full</DebugType>
 		<LangVersion>11.0</LangVersion>
 		<OutputPath>..\..\bin\</OutputPath>
