--- a/Source/Mosa.Utility.UnitTests/Mosa.Utility.UnitTests.csproj
+++ b/Source/Mosa.Utility.UnitTests/Mosa.Utility.UnitTests.csproj
@@ -5,7 +5,7 @@
 		<AssemblyTitle>Mosa.Utility.UnitTests</AssemblyTitle>
 		<Company>MOSA Project</Company>
 		<Product>Mosa.Utility.UnitTests</Product>
-		<Copyright>Copyright © 2020</Copyright>
+		<Copyright>Copyright © MOSA Project 2023</Copyright>
 		<DebugType>full</DebugType>
 		<LangVersion>11.0</LangVersion>
 		<OutputPath>..\..\bin\</OutputPath>
