--- a/Source/Mosa.Workspace.Experiment.Debug/Mosa.Workspace.Experiment.Debug.csproj
+++ b/Source/Mosa.Workspace.Experiment.Debug/Mosa.Workspace.Experiment.Debug.csproj
@@ -5,7 +5,7 @@
 		<AssemblyTitle>Mosa.Workspace.Experiment.Debug</AssemblyTitle>
 		<Company>MOSA Project</Company>
 		<Product>Mosa.Workspace.Experiment.Debug</Product>
-		<copyright>Copyright © MOSA Project 2023</copyright>
+		<Copyright>Copyright © MOSA Project 2023</Copyright>
 		<DebugType>full</DebugType>
 		<LangVersion>11.0</LangVersion>
 		<OutputPath>..\..\bin\</OutputPath>
