--- a/Source/Mosa.Packages/Mosa.DeviceSystem.nuspec
+++ b/Source/Mosa.Packages/Mosa.DeviceSystem.nuspec
@@ -13,7 +13,7 @@
 		<summary>MOSA Device And File System</summary>
 		<description>MOSA Device And File System</description>
 		<releaseNotes></releaseNotes>
-		<Copyright>Copyright © MOSA Project 2023</Copyright>
+		<copyright>Copyright © MOSA Project 2023</copyright>
 		<tags>MOSA Compiler</tags>
 		<dependencies>
 			<dependency id="Mosa.Korlib" version="$version$" />
