--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Transforms\Optimizations\Auto\Ordering\" />
+    <Folder Include="Transforms\Optimizations\Auto\Shrink\" />
     <Folder Include="Transforms\Optimizations\Auto\Special\" />
     <Folder Include="Transforms\Optimizations\Manual\Simplification\" />
   </ItemGroup>
