Squashed commit of the following:
commit 4444ed4be9b7f6018bbe8751e0e1f115e1ad03a7
Author: Phil <phil@thinkedge.com>
Date:   Thu May 25 17:12:59 2023 -0700

    - Qemu tools

commit c03c37ce5c67e0e52331aef22c45c8a2542343da
Merge: d758893e1 b60fb0671
Author: Phil <phil@thinkedge.com>
Date:   Thu May 25 17:10:04 2023 -0700

    Merge commit 'b60fb0671d4d99fe490200634a1d50c5b547f8f2' into 343-WIP

commit b60fb0671d4d99fe490200634a1d50c5b547f8f2
Author: AnErrupTion <anerruption@disroot.org>
Date:   Thu May 11 10:05:44 2023 +0200

    Add Mosa.Tools.Package.Qemu, re-arrange Tools/qemu folder, tidy up NuGet packages descriptions

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -127,8 +127,8 @@ jobs:
         run: dotnet build Source/Mosa.Linux.sln
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu
-        run: sudo apt-get install -y wget qemu qemu-system qemu-system-x86
+      - name: Install Qemu Dependencies
+        run: sudo apt-get install -y libsdl2-image-2.0-0 libvirglrenderer1 libpixman-1-0 libepoxy0 libdw1 libpng16-16 zlib1g libjpeg8 libudev1 libusb-1.0-0 liblzo2-2 libgio-cil libglib2.0-0 libzstd1 libncursesw6 libgbm1 libgtk-3-0 libgdk3.0-cil libcairo2 libgdk-pixbuf-2.0-0 libx11-6 libasound2 libpulse0 libsndio7.0 libbz2-1.0 libc6 libgcc-s1 
       - name: Unit Tests - All Performance Optimizations
         run: dotnet bin/Mosa.Utility.UnitTests.dll -oMax -s Emulator.Display=false
       - name: Unit Tests - No Optimizations
