--- a/Source/Mosa.Demo.SVGAWorld.x86/Properties/launchSettings.json
+++ b/Source/Mosa.Demo.SVGAWorld.x86/Properties/launchSettings.json
@@ -3,7 +3,7 @@
 		"Mosa.Demo.SVGAWorld.x86": {
 			"commandName": "Executable",
 			"executablePath": "..\\bin\\Mosa.Tool.Launcher.exe",
-			"commandLineArgs": "-autostart -include Include -vmware -output-map -output-asm -output-debug -vmdk -oMax Mosa.Demo.SVGAWorld.x86.dll",
+			"commandLineArgs": "-autostart -include Include -output-map -output-asm -output-debug -vmware-svga -oMax Mosa.Demo.SVGAWorld.x86.dll",
 			"workingDirectory": "..\\..\\bin"
 		}
 	}
